added java and buttons

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Document</title>
+	<script src="js/custom.js">
+	</script>
 </head>
 <body>
 
+	<div id="monitor"></div>
+
+	<input type="button" value="1" onClick="guessWhichDoor(1)"/>
+
+	<input type="button" value="2" onClick="guessWhichDoor(2)"/>
+
+	<input type="button" value="" onClick="guessWhichDoor(2)"/>
+	
+	<script src="js/custom.js">
+	</script>
 </body>
 </html>
+
