added some cheat sheets to java file and fixed door number in html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<input type="button" value="2" onClick="guessWhichDoor(2)"/>
 
-	<input type="button" value="" onClick="guessWhichDoor(2)"/>
+	<input type="button" value="3" onClick="guessWhichDoor(2)"/>
 	
 	<script src="js/custom.js">
 	</script>
