--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<input type="button" value="3" onClick="guessWhichDoor(2)"/>
 	
+	<input type="button" value="click me" onClick="changeBackgroundColor()">
 	<script src="js/custom.js">
 	</script>
 </body>
